fix: disable ios rubber band scroll

--- a/public/offline.html
+++ b/public/offline.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Offline</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/favicon.ico" />
-  </head>
-  <body>
-    <h1>You are offline</h1>
-    <p>Please reconnect to the internet to use the app.</p>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Offline</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="/favicon.ico" />
+  <style>
+    body {
+      background-color: oklch(0.141 0.005 285.823);
+      color: oklch(0.985 0 0);
+      font-family: ui-sans-serif, system-ui, sans-serif,
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    }
+  </style>
+</head>
+
+<body>
+  <h1>You are offline</h1>
+  <p>Please reconnect to the internet to use the app.</p>
+</body>
+
 </html>
